# resume-builder

./: .gitignore  LICENSE  README.md  builder.py  convert-jsonresume.py  main.py  parse_job.py  prompt_sample.json  pyproject.toml  requirements.txt  resume_template.html  sample.json  tailor-sample.json  utils.py
utils/: builder.py  parse_job.py
