[tool.poetry]
name = "resume-builder"
version = "0.1.0"
description = ""
authors = ["Tony <me@tonybenoy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
weasyprint = "^62.1"
jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
