[tool.poetry]
name = "resume-builder"
version = "0.1.0"
description = ""
authors = ["Tony <me@tonybenoy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
weasyprint = "^62.1"
jinja2 = "^3.1.5"
selenium = "^4.21.0"
webdriver-manager = "^4.0.1"
bs4 = "^0.0.2"
pyperclip = "^1.8.2"
typer = "^0.12.3"
pathvalidate = "^3.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4

target-version = "py310"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint]
# Enable the isort rules.
extend-select = ["I"]

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
